; ModuleID = '/home/carl/AnghaBench/RetroArch/griffin/extr_..libretro-commonlistsdir_list.c_dir_list_append.c'
source_filename = "/home/carl/AnghaBench/RetroArch/griffin/extr_..libretro-commonlistsdir_list.c_dir_list_append.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.string_list = type { i32 }

@.str = private unnamed_addr constant [2 x i8] c"|\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @dir_list_append(%struct.string_list* %0, i8* %1, i8* %2, i32 %3, i32 %4, i32 %5, i32 %6) #0 {
  %8 = alloca %struct.string_list*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca %struct.string_list*, align 8
  %16 = alloca i32, align 4
  store %struct.string_list* %0, %struct.string_list** %8, align 8
  store i8* %1, i8** %9, align 8
  store i8* %2, i8** %10, align 8
  store i32 %3, i32* %11, align 4
  store i32 %4, i32* %12, align 4
  store i32 %5, i32* %13, align 4
  store i32 %6, i32* %14, align 4
  %17 = load i8*, i8** %10, align 8
  %18 = icmp ne i8* %17, null
  br i1 %18, label %19, label %22

19:                                               ; preds = %7
  %20 = load i8*, i8** %10, align 8
  %21 = call %struct.string_list* @string_split(i8* %20, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0))
  br label %23

22:                                               ; preds = %7
  br label %23

23:                                               ; preds = %22, %19
  %24 = phi %struct.string_list* [ %21, %19 ], [ null, %22 ]
  store %struct.string_list* %24, %struct.string_list** %15, align 8
  %25 = load i8*, i8** %9, align 8
  %26 = load %struct.string_list*, %struct.string_list** %8, align 8
  %27 = load %struct.string_list*, %struct.string_list** %15, align 8
  %28 = load i32, i32* %11, align 4
  %29 = load i32, i32* %12, align 4
  %30 = load i32, i32* %13, align 4
  %31 = load i32, i32* %14, align 4
  %32 = call i32 @dir_list_read(i8* %25, %struct.string_list* %26, %struct.string_list* %27, i32 %28, i32 %29, i32 %30, i32 %31)
  %33 = icmp ne i32 %32, -1
  %34 = zext i1 %33 to i32
  store i32 %34, i32* %16, align 4
  %35 = load %struct.string_list*, %struct.string_list** %15, align 8
  %36 = call i32 @string_list_free(%struct.string_list* %35)
  %37 = load i32, i32* %16, align 4
  ret i32 %37
}

declare dso_local %struct.string_list* @string_split(i8*, i8*) #1

declare dso_local i32 @dir_list_read(i8*, %struct.string_list*, %struct.string_list*, i32, i32, i32, i32) #1

declare dso_local i32 @string_list_free(%struct.string_list*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
